# ropose_datagrabber

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
launch/: datagrabber.launch  datagrabber_objects.launch  datagrabber_simulation.launch
msg/: StampedLinkStates.msg
src/datagrabber/: CMakeLists.txt  datagrabber.cpp
src/datagrabber/dataelements/: CMakeLists.txt  Camera.cpp  Camera.h  FrameBase.cpp  FrameBase.h  FrameDepth.cpp  FrameDepth.h  FrameIR.cpp  FrameIR.h  FramePC.cpp  FramePC.h  FrameRGB.cpp  FrameRGB.h  GazeboLinkStates.cpp  GazeboLinkStates.h  Grabcollection.cpp  Grabcollection.h  Grabelement.cpp  Grabelement.h  PointProjector.cpp  PointProjector.h  Recorder.cpp  Recorder.h  TFLogger.cpp  TFLogger.h
yaml/: DataGrabber_Config.yaml  DataGrabber_Config_sim.yaml  DataGrabber_Objects_Config.yaml
